--- a/fpga/mist/bbc_mist_top.qsf
+++ b/fpga/mist/bbc_mist_top.qsf
@@ -186,12 +186,8 @@ set_global_assignment -name QIP_FILE ../../rtl/T65/T65.qip
 set_global_assignment -name VHDL_FILE ../../rtl/AlanD/R65Cx2.vhd
 set_global_assignment -name SDC_FILE bbc_mist.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE bbc_mist_top.sv
+set_global_assignment -name VERILOG_FILE "mist-modules/sd_card.v"
+set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
 set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name VERILOG_FILE clockgen.v
-set_global_assignment -name QIP_FILE "../../../../mist-modules/mist.qip"
-set_global_assignment -name VERILOG_FILE "../../../../mist-modules/sd_card.v"
-set_global_assignment -name SIGNALTAP_FILE output_files/via.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/ram.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/rtc.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/cpu.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
