--- a/fpga/mist/bbc_mist_top.qsf
+++ b/fpga/mist/bbc_mist_top.qsf
@@ -129,7 +129,7 @@ set_location_assignment PIN_65 -to AUDIO_L
 set_location_assignment PIN_80 -to AUDIO_R
 
 set_global_assignment -name ENABLE_SIGNALTAP OFF
-set_global_assignment -name USE_SIGNALTAP_FILE output_files/rtc.stp
+set_global_assignment -name USE_SIGNALTAP_FILE output_files/fdc.stp
 set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
 set_global_assignment -name ENABLE_NCE_PIN OFF
 set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
@@ -184,10 +184,13 @@ set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_clock_div.v
 set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_attenuator.vhd"
 set_global_assignment -name QIP_FILE ../../rtl/T65/T65.qip
 set_global_assignment -name VHDL_FILE ../../rtl/AlanD/R65Cx2.vhd
+set_global_assignment -name VERILOG_FILE "../../rtl/fdc1772-verilator/floppy.v"
+set_global_assignment -name VERILOG_FILE "../../rtl/fdc1772-verilator/fdc1772.v"
 set_global_assignment -name SDC_FILE bbc_mist.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE bbc_mist_top.sv
 set_global_assignment -name VERILOG_FILE "mist-modules/sd_card.v"
 set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
 set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name VERILOG_FILE clockgen.v
+set_global_assignment -name CDF_FILE output_files/bbc_mist_top.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
