--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rtl/fdc1772-verilator"]
 	path = rtl/fdc1772-verilator
 	url = https://github.com/mist-devel/fdc1772-verilator.git
+[submodule "rtl/T65"]
+	path = rtl/T65
+	url = https://github.com/mist-devel/T65.git
