--- a/fpga/mist/bbc_mist_top.qsf
+++ b/fpga/mist/bbc_mist_top.qsf
@@ -162,6 +162,8 @@ set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC_FOR_AREA ON
 set_global_assignment -name PHYSICAL_SYNTHESIS_MAP_LOGIC_TO_MEMORY_FOR_AREA ON
 set_location_assignment PLL_1 -to CLOCKS|altpll_component|auto_generated|pll1
+set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
+set_global_assignment -name SMART_RECOMPILE ON
 set_global_assignment -name VERILOG_FILE ../rtl/sigma_delta_dac.v
 set_global_assignment -name VERILOG_FILE ../rtl/audio.v
 set_global_assignment -name VERILOG_FILE ../../rtl/adc.v
@@ -176,12 +178,7 @@ set_global_assignment -name VHDL_FILE ../../rtl/mc6845.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/via6522.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/saa5050/saa5050_rom_dual_port.vhd
 set_global_assignment -name VHDL_FILE ../../rtl/saa5050/saa5050.vhd
-set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_top.vhd"
-set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_tone.vhd"
-set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_noise.vhd"
-set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_latch_ctrl.vhd"
-set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_clock_div.vhd"
-set_global_assignment -name VHDL_FILE "../../rtl/sn76489-1.0/sn76489_attenuator.vhd"
+set_global_assignment -name QIP_FILE "../../rtl/sn76489-1.0/sn76489.qip"
 set_global_assignment -name QIP_FILE ../../rtl/T65/T65.qip
 set_global_assignment -name VHDL_FILE ../../rtl/AlanD/R65Cx2.vhd
 set_global_assignment -name VERILOG_FILE "../../rtl/fdc1772-verilator/floppy.v"
@@ -193,6 +190,4 @@ set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
 set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name VERILOG_FILE clockgen.v
 set_global_assignment -name CDF_FILE output_files/bbc_mist_top.cdf
-set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
-set_global_assignment -name SMART_RECOMPILE ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
