--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "rtl/T65"]
 	path = rtl/T65
 	url = https://github.com/mist-devel/T65.git
+[submodule "DeMiSTify"]
+	path = DeMiSTify
+	url = https://github.com/neurorulez/DeMiSTify.git
