--- a/neptuno/BBC_neptuno.qsf
+++ b/neptuno/BBC_neptuno.qsf
@@ -19,7 +19,7 @@
 #
 # Quartus Prime
 # Version 21.1.0 Build 842 10/21/2021 SJ Lite Edition
-# Date created = 20:58:54  December 10, 2021
+# Date created = 22:23:20  December 10, 2021
 #
 # -------------------------------------------------------------------------- #
 #
@@ -221,6 +221,8 @@ set_location_assignment PIN_AA13 -to AUDIO_INPUT
 set_location_assignment PIN_M20 -to I2S_BCLK
 set_location_assignment PIN_AA15 -to I2S_DATA
 set_location_assignment PIN_AB14 -to I2S_LRCLK
+set_location_assignment PIN_R22 -to I2C_SCL
+set_location_assignment PIN_V21 -to I2C_SDA
 set_location_assignment PIN_D22 -to sd_cs_n_o
 set_location_assignment PIN_E21 -to sd_miso_i
 set_location_assignment PIN_D21 -to sd_mosi_o
@@ -235,8 +237,18 @@ set_location_assignment PIN_K22 -to SPI_DI
 set_location_assignment PIN_E4 -to LED
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to sd_miso_i
 set_global_assignment -name SDC_FILE ../DeMiSTify/Board/neptuno/constraints.sdc
-set_global_assignment -name VERILOG_FILE rtl/joydecoder.v
-set_global_assignment -name VHDL_FILE rtl/audio_i2s.vhd
+set_global_assignment -name VHDL_FILE ../DeMiSTify/Board/neptuno/audio_i2s.vhd
+set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/neptuno/joydecoder.v
+set_global_assignment -name VERILOG_MACRO "SDRAM_WINBOND=1"
+set_global_assignment -name VERILOG_MACRO "SDRAM_ROWBITS=13"
+set_global_assignment -name VERILOG_MACRO "SDRAM_COLBITS=9"
+set_global_assignment -name VERILOG_MACRO "SDRAM_CL=2"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tCKminCL2=7500"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tRC=60000"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tWR=2"
+set_global_assignment -name VERILOG_MACRO "SDRAM_tRP=15000"
+set_global_assignment -name VERILOG_MACRO "DEMISTIFY_PARALLEL_AUDIO=1"
+set_global_assignment -name VERILOG_MACRO "DEMISTIFY_NEPTUNO=1"
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY=1"
 set_global_assignment -name QIP_FILE top.qip
 set_global_assignment -name QIP_FILE ../files.qip
@@ -245,7 +257,3 @@ set_global_assignment -name VHDL_FILE ../demistify_config_pkg.vhd
 set_global_assignment -name VHDL_FILE ../firmware/controller_rom1_byte.vhd
 set_global_assignment -name VHDL_FILE ../firmware/controller_rom2_byte.vhd
 set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:../build_id_verilog.tcl"
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
