--- a/fpga/mist/bbc_mist_top.qsf
+++ b/fpga/mist/bbc_mist_top.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP3C25E144C8
 set_global_assignment -name TOP_LEVEL_ENTITY bbc_mist_top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:11:51  AUGUST 27, 2015"
-set_global_assignment -name LAST_QUARTUS_VERSION "13.1 SP4.26"
+set_global_assignment -name LAST_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -183,11 +183,12 @@ set_global_assignment -name QIP_FILE ../../rtl/T65/T65.qip
 set_global_assignment -name VHDL_FILE ../../rtl/AlanD/R65Cx2.vhd
 set_global_assignment -name VERILOG_FILE "../../rtl/fdc1772-verilator/floppy.v"
 set_global_assignment -name VERILOG_FILE "../../rtl/fdc1772-verilator/fdc1772.v"
-set_global_assignment -name SDC_FILE bbc_mist.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE bbc_mist_top.sv
 set_global_assignment -name VERILOG_FILE "mist-modules/sd_card.v"
 set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
 set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name VERILOG_FILE clockgen.v
 set_global_assignment -name CDF_FILE output_files/bbc_mist_top.cdf
+set_global_assignment -name SDC_FILE bbc_mist.sdc
+set_global_assignment -name SDC_FILE ../../bbc.sdc
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
