--- a/deca/BBC_deca.qsf
+++ b/deca/BBC_deca.qsf
@@ -1,6 +1,6 @@
 # -------------------------------------------------------------------------- #
 #
-# Copyright (C) 2018  Intel Corporation. All rights reserved.
+# Copyright (C) 2017  Intel Corporation. All rights reserved.
 # Your use of Intel Corporation's design tools, logic functions 
 # and other software and tools, and its AMPP partner logic 
 # functions, and any output files from any of the foregoing 
@@ -17,8 +17,8 @@
 # -------------------------------------------------------------------------- #
 #
 # Quartus Prime
-# Version 18.1.0 Build 625 09/12/2018 SJ Lite Edition
-# Date created = 22:24:12  December 21, 2021
+# Version 17.1.0 Build 590 10/25/2017 SJ Lite Edition
+# Date created = 18:19:27  January 16, 2022
 #
 # -------------------------------------------------------------------------- #
 #
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE 10M50DAF484C6GES
 set_global_assignment -name TOP_LEVEL_ENTITY deca_top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:03:07  MAY 26, 2021"
-set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
 set_global_assignment -name AUTO_MERGE_PLLS OFF
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
@@ -119,13 +119,8 @@ set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PS2_KEYBOARD_DAT
 set_location_assignment PIN_AA2 -to PS2_MOUSE_CLK
 set_location_assignment PIN_U6 -to PS2_MOUSE_DAT
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PS2_MOUSE_CLK
-set_location_assignment PIN_Y19 -to SIGMA_L
-set_location_assignment PIN_AA17 -to SIGMA_R
-set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to SIGMA_L
-set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to SIGMA_R
 set_location_assignment PIN_H4 -to EAR
 set_location_assignment PIN_Y18 -to UART_RXD
-set_location_assignment PIN_W18 -to UART_TXD
 set_location_assignment PIN_J4 -to JOY1_B2_P9
 set_location_assignment PIN_H3 -to JOY1_B1_P6
 set_location_assignment PIN_J8 -to JOY1_UP
@@ -303,9 +298,9 @@ set_location_assignment PIN_W12 -to DRAM_CAS_N
 set_location_assignment PIN_W11 -to DRAM_RAS_N
 set_location_assignment PIN_AB10 -to DRAM_WE_N
 set_location_assignment PIN_V12 -to DRAM_CS_N
-set_location_assignment PIN_AA16 -to DRAM_CKE
-set_location_assignment PIN_Y11 -to DRAM_LDQM
-set_location_assignment PIN_W13 -to DRAM_UDQM
+set_location_assignment PIN_W18 -to DRAM_CKE
+set_location_assignment PIN_Y19 -to DRAM_LDQM
+set_location_assignment PIN_AA17 -to DRAM_UDQM
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to DRAM_ADDR[12]
 set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to DRAM_ADDR[11]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to DRAM_ADDR[10]
@@ -418,7 +413,6 @@ set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/audio/SPI_RAM.v
 set_global_assignment -name VHDL_FILE ../DeMiSTify/Board/deca/audio/audio_i2s.vhd
 set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/hdmi/I2C_Controller.v
 set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/hdmi/I2C_HDMI_Config.v
-set_global_assignment -name QIP_FILE pll2/pll2.qip
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY_PARALLEL_AUDIO=1"
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY_HDMI=1"
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY_DECA=1"
