--- a/deca/BBC_deca.qsf
+++ b/deca/BBC_deca.qsf
@@ -18,7 +18,7 @@
 #
 # Quartus Prime
 # Version 17.1.0 Build 590 10/25/2017 SJ Lite Edition
-# Date created = 21:43:08  February 27, 2022
+# Date created = 18:45:39  July 13, 2022
 #
 # -------------------------------------------------------------------------- #
 #
@@ -67,6 +67,7 @@ set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE BALANCED
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_location_assignment PIN_M9 -to ADC_CLK_10
 set_instance_assignment -name IO_STANDARD "2.5 V" -to ADC_CLK_10
 set_location_assignment PIN_M8 -to MAX10_CLK1_50
@@ -119,19 +120,29 @@ set_location_assignment PIN_AA2 -to PS2_MOUSE_CLK
 set_location_assignment PIN_U6 -to PS2_MOUSE_DAT
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PS2_MOUSE_CLK
 set_location_assignment PIN_H4 -to EAR
+set_location_assignment PIN_W4 -to SPI_MOSI
+set_location_assignment PIN_R9 -to SPI_MISO_WSBD
+set_location_assignment PIN_P9 -to SPI_SCLK_DABD
+set_location_assignment PIN_Y19 -to SPI_CS0_CLKBD
+set_location_assignment PIN_AA17 -to SPI_CS1
+set_location_assignment PIN_W3 -to SPI_CS2
 set_location_assignment PIN_Y18 -to UART_RXD
+set_location_assignment PIN_W18 -to UART_TXD
 set_location_assignment PIN_J4 -to JOY1_B2_P9
 set_location_assignment PIN_H3 -to JOY1_B1_P6
 set_location_assignment PIN_J8 -to JOY1_UP
 set_location_assignment PIN_J9 -to JOY1_DOWN
 set_location_assignment PIN_F4 -to JOY1_LEFT
 set_location_assignment PIN_F5 -to JOY1_RIGHT
+set_location_assignment PIN_K5 -to JOYX_SEL_O
+set_location_assignment PIN_V17 -to DETO3_JOY_MUX
 set_instance_assignment -name IO_STANDARD "2.5 V" -to JOY1_B2_P9
 set_instance_assignment -name IO_STANDARD "2.5 V" -to JOY1_B1_P6
 set_instance_assignment -name IO_STANDARD "2.5 V" -to JOY1_UP
 set_instance_assignment -name IO_STANDARD "2.5 V" -to JOY1_DOWN
 set_instance_assignment -name IO_STANDARD "2.5 V" -to JOY1_LEFT
 set_instance_assignment -name IO_STANDARD "2.5 V" -to JOY1_RIGHT
+set_instance_assignment -name IO_STANDARD "2.5 V" -to JOYX_SEL_O
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to JOY1_B2_P9
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to JOY1_B1_P6
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to JOY1_UP
@@ -144,8 +155,6 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to JOY1_LEFT
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to JOY1_B1_P6
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to JOY1_B2_P9
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to JOY1_RIGHT
-set_location_assignment PIN_K5 -to JOYX_SEL_O
-set_instance_assignment -name IO_STANDARD "2.5 V" -to JOYX_SEL_O
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to JOYX_SEL_O
 set_location_assignment PIN_R14 -to I2S_SCK
 set_instance_assignment -name IO_STANDARD "1.5 V" -to I2S_SCK
@@ -185,6 +194,36 @@ set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to SD_MISO_I
 set_location_assignment PIN_R20 -to SD_CS_N_O
 set_instance_assignment -name IO_STANDARD "1.5 V" -to SD_CS_N_O
 set_location_assignment PIN_P13 -to SD_SEL
+set_location_assignment PIN_H11 -to USB_CLKIN
+set_location_assignment PIN_F15 -to USB_DATA[7]
+set_location_assignment PIN_E15 -to USB_DATA[6]
+set_location_assignment PIN_D15 -to USB_DATA[5]
+set_location_assignment PIN_H14 -to USB_DATA[4]
+set_location_assignment PIN_E14 -to USB_DATA[3]
+set_location_assignment PIN_H13 -to USB_DATA[2]
+set_location_assignment PIN_E13 -to USB_DATA[1]
+set_location_assignment PIN_E12 -to USB_DATA[0]
+set_location_assignment PIN_H12 -to USB_NXT
+set_location_assignment PIN_J13 -to USB_DIR
+set_location_assignment PIN_J12 -to USB_STP
+set_location_assignment PIN_J11 -to USB_CS
+set_location_assignment PIN_E16 -to USB_RESET_n
+set_location_assignment PIN_D8 -to USB_FAULT_n
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_CS
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[0]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[1]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[2]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[3]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[4]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[5]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[6]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DATA[7]
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_DIR
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_NXT
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_RESET_n
+set_instance_assignment -name IO_STANDARD "1.8 V" -to USB_STP
+set_instance_assignment -name IO_STANDARD "1.2 V" -to USB_FAULT_n
+set_instance_assignment -name IO_STANDARD "1.2 V" -to USB_CLKIN
 set_location_assignment PIN_C10 -to HDMI_I2C_SCL
 set_instance_assignment -name IO_STANDARD "1.8 V" -to HDMI_I2C_SCL
 set_location_assignment PIN_B15 -to HDMI_I2C_SDA
@@ -297,9 +336,9 @@ set_location_assignment PIN_W12 -to DRAM_CAS_N
 set_location_assignment PIN_W11 -to DRAM_RAS_N
 set_location_assignment PIN_AB10 -to DRAM_WE_N
 set_location_assignment PIN_V12 -to DRAM_CS_N
-set_location_assignment PIN_W18 -to DRAM_CKE
-set_location_assignment PIN_Y19 -to DRAM_LDQM
-set_location_assignment PIN_AA17 -to DRAM_UDQM
+set_location_assignment PIN_AA16 -to DRAM_UDQM
+set_location_assignment PIN_AB17 -to DRAM_LDQM
+set_location_assignment PIN_W13 -to DRAM_CKE
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to DRAM_ADDR[12]
 set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to DRAM_ADDR[11]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to DRAM_ADDR[10]
@@ -412,6 +451,8 @@ set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/audio/SPI_RAM.v
 set_global_assignment -name VHDL_FILE ../DeMiSTify/Board/deca/audio/audio_i2s.vhd
 set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/hdmi/I2C_Controller.v
 set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/hdmi/I2C_HDMI_Config.v
+set_global_assignment -name VERILOG_FILE ../DeMiSTify/Board/deca/ulpi/ULPI_PS2.v
+set_global_assignment -name QIP_FILE ../DeMiSTify/Board/deca/ulpi/PLL_PHASE90.qip
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY_PARALLEL_AUDIO=1"
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY_HDMI=1"
 set_global_assignment -name VERILOG_MACRO "DEMISTIFY_DECA=1"
@@ -423,4 +464,3 @@ set_global_assignment -name VHDL_FILE ../demistify_config_pkg.vhd
 set_global_assignment -name VHDL_FILE ../firmware/controller_rom1_byte.vhd
 set_global_assignment -name VHDL_FILE ../firmware/controller_rom2_byte.vhd
 set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:../build_id_verilog.tcl"
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
